// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`patient profile container renders patient profile container correctly 1`] = `
<div
  className="container"
>
  <div
    className="leftPane"
  >
    <div>
      <div
        className="patientRisk"
      />
      <div
        className="patientMain"
      >
        <div
          className="patientHeader"
        >
          <div
            className="patientPhoto"
            style={
              Object {
                "backgroundImage": "url('http://bit.ly/2vaOMQJ')",
              }
            }
          />
          <div
            className="patientTitle"
          >
            <div
              className="patientRiskText"
            >
              High Risk Patient
            </div>
            <div
              className="patientName"
            >
              <div
                className="patientFirstName"
              >
                Unknown
              </div>
              <div />
            </div>
            <div
              className="patientSubheading"
            >
              40
               • 
            </div>
          </div>
        </div>
        <div
          className="patientBasicInfo"
        >
          <div
            className="patientBasicInfoRow"
          >
            <div>
              Date of birth
              :
            </div>
            <div
              className="patientBasicInfoRowData"
            >
              2/16/1977
            </div>
          </div>
          <div
            className="patientBasicInfoRow"
          >
            <div>
              Preferred language
              :
            </div>
            <div
              className="patientBasicInfoRowData"
            >
              Declined
            </div>
          </div>
          <div
            className="patientBasicInfoRow"
          >
            <div>
              Location
              :
            </div>
            <div
              className="patientBasicInfoRowData"
            >
              Brooklyn, NY
            </div>
          </div>
          <div
            className="patientBasicInfoRow"
          >
            <div>
              Patient since
              :
            </div>
            <div
              className="patientBasicInfoRowData"
            >
              Unknown
            </div>
          </div>
          <div
            className="patientBasicInfoRow"
          >
            <div>
              Medicare ID
              :
            </div>
            <div
              className="patientBasicInfoRowData"
            >
              123456789
            </div>
          </div>
        </div>
        <div
          className="patientCommunication"
        >
          <div
            className="patientCommItem patientCommPhone"
          />
          <div
            className="patientCommItem patientCommText"
          />
          <div
            className="patientCommItem patientCommEmail"
          />
          <div
            className="patientCommItem patientCommVideo"
          />
        </div>
        <div
          className="patientScratchPad"
        >
          <textarea
            className="textArea"
            disabled={true}
            onChange={[Function]}
            placeholder="Loading..."
            value={undefined}
          />
          <div
            className="scratchPadStatus"
          />
        </div>
      </div>
    </div>
    <div
      className="patientMedications"
    >
      <div
        className="medicationsHeader"
      >
        <div
          className="medicationsTitle"
        >
          Active medications
        </div>
        <div
          className="medicationsHamburger"
        />
      </div>
      <div
        className="medicationsList emptyMedicationsList"
      >
        <div
          className="medicationsLoading"
        >
          Loading...
        </div>
      </div>
    </div>
    <div
      className="careTeamWidget"
    >
      <div
        className="careTeamWidgetRow"
      >
        <div
          className="careTeamWidgetContent"
        >
          <div
            className="button"
            onClick={[Function]}
          >
            <div
              className="buttonLabel"
            >
              <div
                className="buttonIcon"
              />
              <div
                className="buttonTitle"
              >
                Care Team
              </div>
            </div>
            <div
              className="buttonArrow"
            />
          </div>
          <div
            className="drawer"
          >
            <div>
              <div
                className="careTeamMemberRow"
              >
                <div
                  className="careTeamMemberDetails"
                >
                  <div
                    className="chatLogo"
                  />
                  <div
                    className="careTeamMemberLabel"
                  >
                    <div
                      className="careTeamMemberName"
                    >
                      Chat with team
                    </div>
                    <div
                      className="careTeamMemberRole"
                    >
                      Patient slack channel
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="careTeamMemberContact"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="mainBody"
  >
    <div
      className="tabs"
    >
      <a
        className="tab"
        href="/patients/patient-1/360"
        onClick={[Function]}
      >
        360° View
      </a>
      <a
        className="tab selectedTab"
        href="/patients/patient-1/map"
        onClick={[Function]}
      >
        MAP
      </a>
      <a
        className="tab"
        href="/patients/patient-1/timeline"
        onClick={[Function]}
      >
        Timeline
      </a>
      <a
        className="tab"
        href="/patients/patient-1/patientInfo"
        onClick={[Function]}
      >
        Patient Info
      </a>
    </div>
    <div>
      <div
        className="tabs darkTabs"
      >
        <a
          className="tab selectedTab"
          href="/patients/patient-1/map/active"
          onClick={[Function]}
        >
          Active
        </a>
        <a
          className="tab"
          href="/patients/patient-1/map/suggestions"
          onClick={[Function]}
        >
          Suggestions
        </a>
      </div>
      <div
        className="carePlanPanel"
      >
        <div
          className="container"
        >
          <div
            className="split"
          >
            <div
              className="carePlan"
            >
              <div
                className="emptyCarePlanSuggestionsContainer"
              >
                <div
                  className="loadingLabel"
                >
                  Loading...
                </div>
              </div>
            </div>
          </div>
          <div
            className="split leftMargin"
          >
            <div
              className="container"
            >
              <div
                className="container"
              >
                <div
                  className="loadingSpinner"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`patient profile container renders patient profile for ipad 1`] = `
<div
  className="container"
>
  <div
    className="smallLeftPane"
  >
    <div
      className="smallLeftPaneMain"
    >
      <div
        className="smallLeftPaneTop"
      >
        <div
          className="smallPatientRiskColor"
        />
        <div
          className="smallPatientPhoto"
          style={
            Object {
              "backgroundImage": "url('http://bit.ly/2vaOMQJ')",
            }
          }
        />
        <div
          className="smallPatientName"
        >
          Loading Patient
        </div>
        <div
          className="smallButton profileIcon"
          onClick={[Function]}
        />
        <div
          className="smallButton medsIcon"
          onClick={[Function]}
        />
      </div>
      <div
        className="smallLeftPaneBottom"
      >
        <div
          className="smallChatButton"
          onClick={[Function]}
        />
      </div>
    </div>
    <div
      className="smallDisplayPane hidden"
    >
      <div>
        <div
          className="patientRisk"
        />
        <div
          className="patientMain noBorder"
        >
          <div
            className="patientHeader"
          >
            <div
              className="patientTitle"
            >
              <div
                className="patientRiskText"
              >
                High Risk Patient
              </div>
              <div
                className="patientSingleLineName"
              >
                Unknown null
              </div>
              <div
                className="patientSubheading"
              >
                40
                 • 
              </div>
            </div>
          </div>
          <div
            className="patientBasicInfo"
          >
            <div
              className="patientBasicInfoRow"
            >
              <div>
                Date of birth
                :
              </div>
              <div
                className="patientBasicInfoRowData"
              >
                2/16/1977
              </div>
            </div>
            <div
              className="patientBasicInfoRow"
            >
              <div>
                Preferred language
                :
              </div>
              <div
                className="patientBasicInfoRowData"
              >
                Declined
              </div>
            </div>
            <div
              className="patientBasicInfoRow"
            >
              <div>
                Location
                :
              </div>
              <div
                className="patientBasicInfoRowData"
              >
                Brooklyn, NY
              </div>
            </div>
            <div
              className="patientBasicInfoRow"
            >
              <div>
                Patient since
                :
              </div>
              <div
                className="patientBasicInfoRowData"
              >
                Unknown
              </div>
            </div>
            <div
              className="patientBasicInfoRow"
            >
              <div>
                Medicare ID
                :
              </div>
              <div
                className="patientBasicInfoRowData"
              >
                123456789
              </div>
            </div>
          </div>
          <div
            className="patientCommunication"
          >
            <div
              className="patientCommItem patientCommPhone"
            />
            <div
              className="patientCommItem patientCommText"
            />
            <div
              className="patientCommItem patientCommEmail"
            />
            <div
              className="patientCommItem patientCommVideo"
            />
          </div>
          <div
            className="patientScratchPad"
          >
            <textarea
              className="textArea"
              disabled={true}
              onChange={[Function]}
              placeholder="Loading..."
              value={undefined}
            />
            <div
              className="scratchPadStatus"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="smallDisplayPane hidden"
    >
      <div
        className="patientMedications"
      >
        <div
          className="medicationsHeader"
        >
          <div
            className="medicationsTitle"
          >
            Active medications
          </div>
          <div
            className="medicationsHamburger"
          />
        </div>
        <div
          className="medicationsList emptyMedicationsList"
        >
          <div
            className="medicationsLoading"
          >
            Loading...
          </div>
        </div>
      </div>
    </div>
    <div
      className="chatDisplayPane hidden"
    >
      <div
        className="careTeamWidget skinny"
      >
        <div
          className="careTeamWidgetRow"
        >
          <div
            className="careTeamWidgetContent"
          >
            <div
              className="button openButton condensed"
              onClick={[Function]}
            >
              <div
                className="buttonLabel"
              >
                <div
                  className="buttonIcon hidden"
                />
                <div
                  className="buttonTitle"
                >
                  Care Team
                </div>
              </div>
              <div
                className="buttonArrow hidden"
              />
            </div>
            <div
              className="drawer open tall"
            >
              <div>
                <div
                  className="careTeamMemberRow"
                >
                  <div
                    className="careTeamMemberDetails"
                  >
                    <div
                      className="chatLogo"
                    />
                    <div
                      className="careTeamMemberLabel"
                    >
                      <div
                        className="careTeamMemberName"
                      >
                        Chat with team
                      </div>
                      <div
                        className="careTeamMemberRole"
                      >
                        Patient slack channel
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="careTeamMemberContact"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="touchArea hidden"
      onClick={[Function]}
    />
  </div>
  <div
    className="mainBodySmall"
  >
    <div
      className="tabs"
    >
      <a
        className="tab"
        href="/patients/patient-1/360"
        onClick={[Function]}
      >
        360° View
      </a>
      <a
        className="tab selectedTab"
        href="/patients/patient-1/map"
        onClick={[Function]}
      >
        MAP
      </a>
      <a
        className="tab"
        href="/patients/patient-1/timeline"
        onClick={[Function]}
      >
        Timeline
      </a>
      <a
        className="tab"
        href="/patients/patient-1/patientInfo"
        onClick={[Function]}
      >
        Patient Info
      </a>
    </div>
    <div>
      <div
        className="tabs darkTabs"
      >
        <a
          className="tab selectedTab"
          href="/patients/patient-1/map/active"
          onClick={[Function]}
        >
          Active
        </a>
        <a
          className="tab"
          href="/patients/patient-1/map/suggestions"
          onClick={[Function]}
        >
          Suggestions
        </a>
      </div>
      <div
        className="carePlanPanel"
      >
        <div
          className="container"
        >
          <div
            className="split"
          >
            <div
              className="carePlan"
            >
              <div
                className="emptyCarePlanSuggestionsContainer"
              >
                <div
                  className="loadingLabel"
                >
                  Loading...
                </div>
              </div>
            </div>
          </div>
          <div
            className="split leftMargin"
          >
            <div
              className="container"
            >
              <div
                className="container"
              >
                <div
                  className="loadingSpinner"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
